<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChooseYourOwnAdventure</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_view_start_text">Start an adventure</string>
    <string name="button_start_traveling_text">Start traveling</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_traveling">TravelingActivity</string>
    <string name="title_activity_alley">Alley</string>
    <string name="title_activity_room">Room</string>
    <string name="text_view_alley_text">You have ventured down a dark alley, where would you like to go next</string>
    <string name="button_left_text">Go Left</string>
    <string name="button_continue_text">Continue</string>
    <string name="button_right_text">Go Right</string>
    <string name="text_view_room_text">You have entered a room with two doors</string>
    <string name="button_door_one_text">Enter Door 1</string>
    <string name="button_door_two_text">Enter Door 2</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="text_win">You\'ve reached the gold!</string>
    <string name="text_loose">You\'ve fallen into the pit of despair</string>
    <string name="text_view_difficulty_text">Chose a difficulty level...</string>
    <string name="radio_button_low_text">Low</string>
    <string name="radio_button_medium_text">Medium</string>
    <string name="radio_button_high_text">High</string>
    <string name="pref_customized_messages">Customized messages</string>
    <string name="pref_username_title">Username</string>
    <string name="pref_username_summary">Username for a personalized message</string>
    <string name="pref_win_message_title">Winner\'s message</string>
    <string name="pref_win_message_summary">Personalized message for the winner\'s screen</string>
    <string name="pref_lose_message_title">Loser\'s message</string>
    <string name="pref_lose_message_summary">Personalized message for the loser\'s screen</string>
    <string name="activity_settings_title">Settings</string>

</resources>
